@@ -1,10 +1,9 @@
-package uk.gov.digital.ho.hocs.queue.common;
+package uk.gov.digital.ho.hocs.queue.complaints;
 
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import uk.gov.digital.ho.hocs.application.ClientContext;
-import uk.gov.digital.ho.hocs.client.audit.AuditClient;
 import uk.gov.digital.ho.hocs.client.casework.CaseworkClient;
 import uk.gov.digital.ho.hocs.client.casework.dto.ComplaintCorrespondent;
 import uk.gov.digital.ho.hocs.client.document.DocumentS3Client;
@@ -21,24 +20,23 @@ public class ComplaintService {
 
     public static final String CORRESPONDENTS_LABEL = "Correspondents";
     public static final String COMPLAINT_TYPE_LABEL = "ComplaintType";
+    public static final String CHANNEL_LABEL = "Channel";
     public static final String ORIGINAL_FILENAME = "WebFormContent.txt";
     public static final String DOCUMENT_TYPE = "To document";
+    public static final String ORIGINATED_FROM_LABEL = "XOriginatedFrom";
     private final WorkflowClient workflowClient;
     private final CaseworkClient caseworkClient;
     private final ClientContext clientContext;
-    private final AuditClient auditClient;
     private final DocumentS3Client documentS3Client;
 
     @Autowired
     public ComplaintService(WorkflowClient workflowClient,
                             CaseworkClient caseworkClient,
                             ClientContext clientContext,
-                            AuditClient auditClient,
                             DocumentS3Client documentS3Client) {
         this.workflowClient = workflowClient;
         this.caseworkClient = caseworkClient;
         this.clientContext = clientContext;
-        this.auditClient = auditClient;
         this.documentS3Client = documentS3Client;
     }
 
@@ -52,8 +50,8 @@ public class ComplaintService {
 
         DocumentSummary documentSummary = new DocumentSummary(ORIGINAL_FILENAME, DOCUMENT_TYPE, untrustedS3ObjectName);
 
-        CreateCaseRequest request = new CreateCaseRequest(complaintTypeData.getCaseType(), complaintData.getDateReceived(), List.of(documentSummary));
-        CreateCaseResponse createCaseResponse = workflowClient.createCase(request);
+        var createRequest = composeCreateCaseRequest(complaintData, complaintTypeData, documentSummary);
+        CreateCaseResponse createCaseResponse = workflowClient.createCase(createRequest);
 
         UUID caseUUID = createCaseResponse.getUuid();
 
@@ -64,55 +62,43 @@ public class ComplaintService {
             point we have the document stored, and the case is created.
          */
         try {
-
             UUID stageForCaseUUID = caseworkClient.getStageForCase(caseUUID);
-
-            auditClient.audit(complaintTypeData.getCreateComplaintEventType(), caseUUID, stageForCaseUUID, complaintData.getRawPayload());
-
             log.info("createComplaint, get stage for case : caseUUID : {}, stageForCaseUUID : {}", caseUUID, stageForCaseUUID);
 
             caseworkClient.updateStageUser(caseUUID, stageForCaseUUID, UUID.fromString(clientContext.getUserId()));
 
             List<ComplaintCorrespondent> correspondentsList = complaintData.getComplaintCorrespondent();
             if (!correspondentsList.isEmpty()) {
-
                 for (ComplaintCorrespondent correspondent : correspondentsList) {
                     caseworkClient.addCorrespondentToCase(caseUUID, stageForCaseUUID, correspondent);
                 }
 
                 UUID primaryCorrespondent = caseworkClient.getPrimaryCorrespondent(caseUUID);
-
                 log.info("createComplaint, added primary correspondent : caseUUID : {}, primaryCorrespondent : {}", caseUUID, primaryCorrespondent);
 
-                Map<String, String> correspondents = Collections.singletonMap(CORRESPONDENTS_LABEL, primaryCorrespondent.toString());
-
-                auditClient.audit(complaintTypeData.getCreateCorrespondentEventType(), caseUUID, stageForCaseUUID, correspondents);
-
-                Map<String, String> complaintType = Collections.singletonMap(COMPLAINT_TYPE_LABEL, complaintData.getComplaintType());
-
-                HashMap<String, String> data = new HashMap<>();
-                data.putAll(correspondents);
-                data.putAll(complaintType);
-
-                caseworkClient.updateCase(caseUUID, stageForCaseUUID, data);
-
-                log.info("createComplaint, case data updated for correspondent and complaint type : caseUUID : {}, complaintType : {}", caseUUID, complaintType);
-
-                auditClient.audit(complaintTypeData.getUpdateCaseEventType(), caseUUID, stageForCaseUUID, data);
+                caseworkClient.updateCase(caseUUID, stageForCaseUUID, Map.of(CORRESPONDENTS_LABEL, primaryCorrespondent.toString()));
+                log.info("createComplaint, case data updated with primary correspondent: caseUUID : {}, primaryCorrespondent : {}", caseUUID, complaintData.getComplaintType());
             } else {
                 log.info("createComplaint, no correspondents added to case : caseUUID : {}", caseUUID);
             }
 
             caseworkClient.updateStageTeam(caseUUID, stageForCaseUUID, UUID.fromString(clientContext.getTeamId()));
-
             log.info("createComplaint, team updated for case : caseUUID : {}, teamUUID : {}", caseUUID, clientContext.getTeamId());
 
             log.info("createComplaint, completed : caseUUID : {}", caseUUID);
-
         } catch (Exception e) {
             log.warn("Partial case creation for messageId: {}, caseId:{}, untrusted s3 name :{}", clientContext.getCorrelationId(), caseUUID, untrustedS3ObjectName);
             log.warn(e.getMessage());
         }
+    }
+
+    private CreateCaseRequest composeCreateCaseRequest(ComplaintData complaintData, ComplaintTypeData complaintTypeData, DocumentSummary documentSummary) {
+        Map<String, String> initialData = Map.of(
+                COMPLAINT_TYPE_LABEL, complaintData.getComplaintType(),
+                CHANNEL_LABEL, complaintTypeData.getOrigin(),
+                ORIGINATED_FROM_LABEL, complaintTypeData.getOrigin());
+
+        return new CreateCaseRequest(complaintTypeData.getCaseType(), complaintData.getDateReceived(), List.of(documentSummary), initialData);
     }
 
 }
